<resources>
    <string name="app_name">Sitor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bckground">Bckground</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in/ Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="hello">Hello</string>
    <string name="item_name">item name</string>
    <string name="the_cost_is">The cost is :</string>
    <string name="effects_of_the_item">Effects of the item :</string>
    <string name="current_coins">Current Coins :</string>
    <string name="inventory">Inventory</string>
    <string name="equipment">Equipment</string>
    <string name="battle">Battle</string>
    <string name="main_menu">Main menu</string>
    <string name="attack">Attack</string>
    <string name="run_away">Run away</string>
    <string name="you_have_no_suitable_equipment">You have no suitable equipment</string>
    <string name="you_have_no_items_in_your_inventory_you_can_buy_items_in_the_shop">You have no items in your inventory, you can buy items in the shop !</string>
    <string name="channel_name"> SitorChannel</string>
    <string name="channel_description"> This is a channel for Sitor</string>
    <string name="password">Password</string>
    <string name="playername">Playername</string>
    <string name="SitorName">SitorName</string>
    <string name="SitorPass">SitorPass</string>
    <string name="KeepLoggedIn">KeepLoggedIn</string>
    <string name="claim_reward">Claim reward !</string>
    <string name="these_are_the_current_stats_of_your_character">These are the current Stats of your Character</string>
    <string name="attackStats">Attack:</string>
    <string name="strength">Strength:</string>
    <string name="defence">Defence:</string>
    <string name="hitpoints">Hitpoints:</string>
    <string name="status_points_left_to_spend">Status points Left to spend:</string>
    <string name="points_spended_on_hp">points spent on HP:</string>
    <string name="points_spended_on_attack">points spent on Attack:</string>
    <string name="points_spended_on_strength">points spent on Strength:</string>
    <string name="points_spended_on_defence">points spent on Defence:</string>
    <string name="klick_on_hero_to_view_stats">Klick on Hero to view stats</string>
</resources>